src/objects/Corporate_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corporate Accounts</relationshipLabel>
        <relationshipName>Corporate_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_PostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Contact__c</fullName>
        <label>Created By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Corporate Accounts</relationshipLabel>
        <relationshipName>Corporate_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Corporate Account</label>
    <nameField>
        <label>Corporate Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>